--- a/index.html
+++ b/index.html
@@ -1,34 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Application</title>
     <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet" />
+</head>
+<body>
     <div class="app-wrap">
-      <header>
-        <input
-          type="text"
-          autocomplete="on"
-          class="search-box"
-          placeholder="Enter Your City"
-        />
-      </header>
-      <main>
-        <section class="location">
-          <div class="city"><b>Mathura, India</b></div>
-          <div class="date"><i>Saturday 09 March 2024</i></div>
-        </section>
-        <div class="current">
-          <div class="temp">15<span>°c</span></div>
-          <div class="weather">Sunny</div>
-          <div class="hi-low">13°c / 16°c</div>
-        </div>
-      </main>
+        <header>
+            <h1>Weather App</h1>
+            <input
+                type="text"
+                autocomplete="on"
+                class="search-box"
+                placeholder="Enter Your City"
+                aria-label="City name input"
+            />
+        </header>
+        <main>
+            <section class="location">
+                <div class="city"><b>Mathura, India</b></div>
+                <div class="date"><i>Saturday 09 March 2024</i></div>
+            </section>
+            <div class="current">
+                <div class="temp">15<span>°C</span></div>
+                <div class="weather">Sunny</div>
+                <div class="hi-low">13°C / 16°C</div>
+            </div>
+        </main>
+        <footer>
+            <p>&copy; 2024 Weather Application | All Rights Reserved</p>
+        </footer>
     </div>
 
     <script src="script.js"></script>
-  </body>
+</body>
 </html>
